# XyloCore

./: README.md
XyloCore_/: CMakeLists.txt  CMakePresets.json
XyloCore_/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
XyloCore_/Source/audio/: SampleLayer.cpp  SampleLayer.h  XyloEngine.cpp  XyloEngine.h  XyloSound.cpp  XyloSound.h  XyloVoice.cpp  XyloVoice.h
XyloCore_/Source/state/: ParameterLayout.cpp  ParameterLayout.h  PresetManager.cpp  PresetManager.h
XyloCore_/Source/ui/: KeyboardBarView.cpp  KeyboardBarView.h
XyloCore_/assets/presets/: Arcade_Crystal.json  Bright_Soloist.json  Concert_Natural.json  Dream_Glass.json  Indie_Music_Box.json  Lo_Fi_Wood.json  Noir_Hall.json  Pixel_Glint.json  Soft_Mallets.json  Stage_Attack.json  Trailer_Spark.json  Warm_Felt_Bell.json
XyloCore_/assets/samples/: README.txt
XyloCore_/scripts/: build_fetchcontent.sh  build_macos.sh
